@@ -1,8 +1,7 @@
 package br.gov.pr.pc.dp.sistema_delegacia_civil.dtos.boletim_ocorrencia;
 
 import br.gov.pr.pc.dp.sistema_delegacia_civil.dtos.endereco.EnderecoResponseDTO;
-import br.gov.pr.pc.dp.sistema_delegacia_civil.dtos.pessoa.PessoaEnvolvimentoRequestDTO;
-import br.gov.pr.pc.dp.sistema_delegacia_civil.dtos.pessoa.PessoaEnvolvimentoResponseDTO;
+import br.gov.pr.pc.dp.sistema_delegacia_civil.dtos.pessoa_envolvimento.PessoaEnvolvimentoResponseDTO;
 import br.gov.pr.pc.dp.sistema_delegacia_civil.enums.delegacia.OrigemForcaPolicial;
 import br.gov.pr.pc.dp.sistema_delegacia_civil.models.BoletimOcorrencia;
 import lombok.AllArgsConstructor;
@@ -10,12 +9,15 @@ import lombok.Data;
 import lombok.NoArgsConstructor;
 
 import java.time.LocalDateTime;
+import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Data
 @AllArgsConstructor
 @NoArgsConstructor
 public class BoletimOcorrenciaResponseDTO {
+
     private Long id;
     private OrigemForcaPolicial origemForcaPolicial;
     private LocalDateTime dataOcorrencia;
@@ -24,7 +26,7 @@ public class BoletimOcorrenciaResponseDTO {
     private String representacao;
     private EnderecoResponseDTO endereco;
     private Long delegaciaId;
-    private List<PessoaEnvolvimentoResponseDTO> pessoasEnvolvidas;
+    private List<PessoaEnvolvimentoResponseDTO> pessoasEnvolvidas = new ArrayList<>();
 
     public static BoletimOcorrenciaResponseDTO fromEntity(BoletimOcorrencia entity) {
         if (entity == null) return null;
@@ -42,11 +44,12 @@ public class BoletimOcorrenciaResponseDTO {
                 ? EnderecoResponseDTO.fromEntity(entity.getEndereco())
                 : null);
 
-        dto.setPessoasEnvolvidas(entity.getPessoasEnvolvidas() != null
-                ? entity.getPessoasEnvolvidas().stream()
-                .map(PessoaEnvolvimentoResponseDTO::fromEntity)
-                .toList()
-                : null);
+        if (entity.getPessoasEnvolvidas() != null) {
+            dto.setPessoasEnvolvidas(entity.getPessoasEnvolvidas()
+                    .stream()
+                    .map(PessoaEnvolvimentoResponseDTO::fromEntity)
+                    .collect(Collectors.toList()));
+        }
 
         return dto;
     }
